feat: Add complete InfoShield AI disaster verification system
- Implement multi-agent architecture with Orchestrator, Analyzer, Search, and Credibility agents
- Add custom tools for query analysis, credibility scoring, and human review queue
- Create debug runner for visualizing agent workflow
- Add Kaggle notebook for demonstration
- Include comprehensive README with architecture diagrams and setup instructions
- Set up project structure with proper package organization
- Configure environment with pyproject.toml and dependencies
- Add data storage for human verification queue (CSV)

Key features:
- Real-time disaster information verification using Google Search
- Credibility scoring based on official sources
- Urgency detection and sentiment analysis
- Human-in-the-loop for low-confidence queries
- Sequential agent orchestration with state sharing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,19 @@
 [project]
 name = "infoshield-ai"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.2.0"
+description = "Multi-agent disaster information verification system using Google ADK"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "google-genai",
+    "google-adk>=1.0.0",
+    "python-dotenv>=1.0.0",
+]
+
+[project.scripts]
+infoshield = "runner:main"
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
 ]
